--- a/test2.html
+++ b/test2.html
@@ -7,18 +7,8 @@
     <meta name="keywords" content="Cardano, ADA, IAG, staking, DRep, Dutch stake pool">
     <meta name="author" content="The Dutch Stake Pool">
 
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="The Dutch Stake Pool | Reliable Cardano Staking">
-    <meta property="og:description" content="Join our Dutch Bare-Metal, low-fee stake pool for $ADA and $IAG. Discover a reliable DRep today.">
-    <meta property="og:image" content="tdsp_logo4.webp">
-    <meta property="og:url" content="https://www.thedutchstakepool.com">
-    <meta property="og:type" content="website">
-
     <title>The Dutch Stake Pool | Reliable Cardano Staking</title>
     <link rel="icon" href="tdsp_logo4_ico.webp" type="image/webp">
-
-    <!-- Preload Main Logo -->
-    <link rel="preload" href="tdsp_logo4.webp" as="image">
 
     <style>
         * {
@@ -27,18 +17,15 @@
             box-sizing: border-box;
         }
 
-        body, h1, p {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-        }
-
         body {
             display: flex;
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background-color: #EEEEEE;
+            background-color: #b0adad;
             color: #1d1d1f;
             overflow: hidden;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
         }
 
         .container {
@@ -52,93 +39,49 @@
             color: #000000;
             font-weight: 700;
             margin-bottom: 20px;
-            transition: color 0.3s ease-in-out;
-        }
-
-        h1:hover {
-            color: #555;
-        }
-
-        img {
-            width: 100%;
-            max-width: 600px;
-            height: auto;
         }
 
         p {
-            font-size: 1rem;
+            font-size: 2rem;
             color: #000000;
             margin-bottom: 20px;
             line-height: 1.5;
         }
 
-        .links {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
+        /* Keyframes for Auto Hover */
+        @keyframes autoHover {
+            0% {
+                transform: scale(1); /* Initial size */
+                box-shadow: none; /* No shadow */
+            }
+            50% {
+                transform: scale(1.1); /* Enlarged size */
+                box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3); /* Shadow effect */
+            }
+            100% {
+                transform: scale(1); /* Return to normal size */
+                box-shadow: none; /* Remove shadow */
+            }
         }
 
-        .links a img {
-            width: 40px;
-            height: 40px;
-            transition: all 0.3s ease-in-out;
-        }
-
-        .links a:hover img {
-            opacity: 0.8;
-            transform: scale(1.1);
-        }
-
-        .links a {
-            text-decoration: none;
-        }
-
-        a:focus {
-            outline: 2px solid #555;
-            outline-offset: 2px;
-        }
-
-        .skip-link {
-            position: absolute;
-            top: -40px;
-            left: 0;
-            background: #000;
-            color: #fff;
-            padding: 8px;
-            z-index: 100;
-            transition: top 0.3s ease;
-        }
-
-        .skip-link:focus {
-            top: 0;
-        }
-
-        #back-to-top {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background: #000;
-            color: #fff;
-            border: none;
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            display: none;
+        /* Logo Styles */
+        .logo-container img {
+            width: 100%;
+            max-width: 600px;
+            height: auto;
             cursor: pointer;
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+            animation: autoHover 1.5s ease-in-out; /* Auto hover animation on page load */
         }
 
-        #back-to-top:focus {
-            outline: 2px solid #fff;
+        .logo-container img:hover {
+            transform: scale(1.1); /* Enlarge the logo on hover */
+            box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.3); /* Add shadow on hover */
         }
 
-        @media (prefers-color-scheme: light) {
-            body {
-                background-color: #1d1d1f;
-                color: #ffffff;
-            }
-            h1 {
-                color: #ffffff;
-            }
+        .logo-container img:active {
+            transform: scale(0.95); /* Slightly shrink the logo on click */
+            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5); /* Adjust shadow for click */
         }
 
         @media (max-width: 480px) {
@@ -147,65 +90,25 @@
             }
 
             p {
-                font-size: 0.9rem;
+                font-size: 1rem;
             }
 
-            .links a img {
-                width: 30px;
-                height: 30px;
+            .logo-container img {
+                max-width: 300px;
             }
         }
     </style>
-
-    <!-- Structured Data for SEO -->
-    <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "The Dutch Stake Pool",
-        "url": "https://www.thedutchstakepool.com",
-        "logo": "tdsp_logo4.webp",
-        "sameAs": [
-            "https://twitter.com/DamionDutch",
-            "https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl",
-            "https://pool.pm/b4099d09df1748b807ed9a3112eb5d978a2b499bb12c46f14b3749ea"
-        ]
-    }
-    </script>
 </head>
 <body>
-    <a href="#main-content" class="skip-link">Skip to content</a>
     <main class="container" id="main-content">
         <h1>Welcome to The Dutch Stake Pool</h1>
-        <img src="tdsp_logo4.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool" width="600" height="auto">
-        <p>Dutch Bare-Metal, low-fee stake pool. The one-stop shop for staking $ADA and $IAG. If you're looking for a DRep, click on the ADA logo below.</p>
-
-        <div class="links">
-            <!-- Twitter Logo as a clickable link -->
-            <a href="https://twitter.com/DamionDutch" target="_blank" rel="noopener noreferrer" aria-label="Follow The Dutch Stake Pool on Twitter">
-                <img src="X-logo_ico.webp" alt="Follow The Dutch Stake Pool on Twitter" loading="lazy">
-            </a>
-
-            <!-- Cardano DRep Logo as a clickable link -->
-            <a href="https://gov.tools/connected/drep_directory/drep1u634jgjwly7gqd90tuhqrwayze2x0revzz657tael3kpq24uxpl" target="_blank" rel="noopener noreferrer" aria-label="View The Dutch Stake Pool's DRep ID">
-                <img src="cardano_logo_ico.webp" alt="View The Dutch Stake Pool's DRep ID" loading="lazy">
-            </a>
-
-            <!-- Join Stake pool clickable link -->
-            <a href="https://pool.pm/b4099d09df1748b807ed9a3112eb5d978a2b499bb12c46f14b3749ea" target="_blank" rel="noopener noreferrer" aria-label="Join The Dutch Stake Pool">
-                <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us" loading="lazy">
+        <!-- Clickable Logo with Auto Hover Effect -->
+        <div class="logo-container">
+            <a href="details.html">
+                <img src="tdsp_logo4.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
             </a>
         </div>
+        <p>Dutch Bare-Metal, low-fee stake pool. The one-stop shop for staking $ADA and $IAG. If you're looking for a DRep, click on the ADA logo below.</p>
     </main>
-    <button id="back-to-top" aria-label="Back to top">&uarr;</button>
-    <script>
-        const backToTopButton = document.getElementById('back-to-top');
-        window.addEventListener('scroll', () => {
-            backToTopButton.style.display = window.scrollY > 200 ? 'block' : 'none';
-        });
-        backToTopButton.addEventListener('click', () => {
-            window.scrollTo({ top: 0, behavior: 'smooth' });
-        });
-    </script>
 </body>
 </html>
