--- a/about.html
+++ b/about.html
@@ -1,4 +1,14 @@
-<!-- Second Page: details.html -->
+<?php
+// Set CSP before any HTML output
+$nonce = base64_encode(random_bytes(16));
+header("Content-Security-Policy: 
+    default-src 'self'; 
+    img-src 'self' data: https://*; 
+    style-src 'self' 'nonce-$nonce' https://fonts.googleapis.com; 
+    font-src 'self' https://fonts.gstatic.com; 
+    frame-src 'self';
+");
+?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,16 +16,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Dutch Stake Pool | About</title>
     <link rel="stylesheet" href="styles.css">
-
-    <!-- Security Policy -->
-    <meta http-equiv="Content-Security-Policy" content="
-    default-src 'self'; 
-    img-src 'self' https://*; 
-    script-src 'self'; 
-    style-src 'self' https://fonts.googleapis.com; 
-    font-src 'self' https://fonts.gstatic.com; 
-    frame-src 'self'; 
-    form-action 'self'">
 </head>
 <body>
     <main class="container">
