--- a/strch.html
+++ b/strch.html
@@ -29,8 +29,8 @@ header("Content-Security-Policy:
                 <table>
                     <tr>
                         <td><b>Company</b></td>
-                        <td><b><span id="team-name-B0ADAD">Loading...</span></b></td>
-                        <td><b><span id="team-name-868C0C">Loading...</span></b></td>
+                        <td><a href="miners_b0adad.html" rel="noopener noreferrer" aria-label="Miners TDSP01"><b><span id="team-name-B0ADAD">Loading...</span></b></a></td>
+                        <td><a href="miners_868c0c.html" rel="noopener noreferrer" aria-label="Miners TDSP02"><b><span id="team-name-868C0C">Loading...</span></b></a></td>
                     </tr>
                     <tr>
                         <td><b>Color ID</b></td>
@@ -49,8 +49,8 @@ header("Content-Security-Policy:
                     </tr>
                     <tr>
                         <td><b>Miners</b></td>
-                        <td><a href="miners_b0adad.html" rel="noopener noreferrer" aria-label="Miners TDSP01"><span id="total-miners-B0ADAD">Loading...</span></a></td>
-                        <td><a href="miners_868c0c.html" rel="noopener noreferrer" aria-label="Miners TDSP02"><span id="total-miners-868C0C">Loading...</span></a></td>
+                        <td><span id="total-miners-B0ADAD">Loading...</span></a></td>
+                        <td><span id="total-miners-868C0C">Loading...</span></a></td>
                     </tr>
                     <tr>
                         <td><b>Miner Balance</b></td>
