--- a/strch.html
+++ b/strch.html
@@ -48,6 +48,14 @@ header("Content-Security-Policy:
                         <td><span id="team-balance-868C0C">Loading...</span></td>
                     </tr>
                     <tr>
+                        <td><b>Total Company Balance</b></td>
+                        <td><b><span id="total-teams-balance">Loading...</span></b></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
                         <td><b>Miners</b></td>
                         <td><span id="total-miners-B0ADAD">Loading...</span></a></td>
                         <td><span id="total-miners-868C0C">Loading...</span></a></td>
